# marketmind

./: .gitignore  README.md  pyproject.toml
backend/: .env  db.py  executive_briefs.py  generate_gtm.py  heatmap.py  main.py  make_campaigns.py  make_personas.py  market_research.py  pyproject.toml  test_backend.py
backend/models/: agents.py  images.py  llms.py  tool_registry.py  tools.py
frontend/marketmind/: .eslintrc.json  next.config.js  package.json  pnpm-lock.yaml
frontend/marketmind/app/: communicator.tsx  globals.css  layout.tsx  page.tsx
frontend/marketmind/app/analytics/: page.tsx
frontend/marketmind/app/campaigns/: page.tsx
frontend/marketmind/app/content/: campaigns-04fa7467-2ca2-498c-9ccf-b5a1e211be20.json  campaigns-058b65ba-b1f6-411a-bd01-cfc2591a393e.json  campaigns-33708322-17e3-4555-a709-38ee47c5d266.json  campaigns-7323b9dd-7200-413b-9aa6-b3a5e5865628.json  campaigns-81cc7c9d-2ee6-445e-93c5-c119f0525fd8.json  campaigns-abc.json  campaigns-ba27ef48-7542-4475-a658-7c56a979a5f3.json  campaigns-cccfc3d9-ad3e-4e84-858b-461e82b2c2bf.json  campaigns-fb159ad1-b2eb-494d-8cfd-74f750e5de19.json  campaigns-fdfc77a1-541f-4f18-ad48-a296f2fbe01d.json  executive-brief-04fa7467-2ca2-498c-9ccf-b5a1e211be20.json  executive-brief-058b65ba-b1f6-411a-bd01-cfc2591a393e.json  executive-brief-33708322-17e3-4555-a709-38ee47c5d266.json  gtm-plan-abc.json  (+36 more)
frontend/marketmind/components/: Campaign.tsx  ChatDialog.tsx  DetailedCampaign.tsx  GroupChatDialog.tsx  HeatmapAnalysis.tsx  LandingPage.tsx  LoadingModal.tsx  Navigation.tsx  Persona.tsx  QuickLoadingModal.tsx
(+26 files in other folders)
