[project]
name = "marketmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "exa-py>=1.12.1",
    "fal-client>=0.5.9",
    "fastapi>=0.115.12",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.6",
    "tiktoken>=0.9.0",
    "uvicorn>=0.34.2",
]
